--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,41 @@ max-line-length = 88
 max-complexity = 10
 inline-quotes = double
 
+
 [tox]
 envlist = py27,py36
 
+
 [testenv]
+extras = test
 commands=python -m pytest --cov fio_area --ignore=venv
 deps=
-    pytest
-    pytest-cov
-    codecov
+    numpy
+
+
+[testenv:flake8]
+basepython = python3
+skip_install = true
+deps =
+    flake8
+commands =
+    flake8 fio_area
+
+
+[testenv:pylint]
+basepython = python3
+skip_install = true
+deps =
+    pyflakes
+    pylint
+commands =
+    pylint fio_area
+
+
+[testenv:doc]
+select = D1
+ignore = D105
+deps =
+    pydocstyle
+commands =
+    python -m pydocstyle fio_area
