--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist = py27,py36
 
 [testenv]
 extras = test
-commands=python -m pytest --cov fio_area --ignore=venv
+commands=python -m pytest -s -v --cov fio_area --ignore=venv
 deps=
     numpy
 
