--- a/tox.ini
+++ b/tox.ini
@@ -10,34 +10,6 @@ envlist = py27,py36
 
 [testenv]
 extras = test
-commands=python -m pytest -s -v --cov fio_area --ignore=venv
+commands=python -m pytest -s -v --cov fio_area --cov-report term-missing --ignore=venv
 deps=
     numpy
-
-
-[testenv:flake8]
-basepython = python3
-skip_install = true
-deps =
-    flake8
-commands =
-    flake8 fio_area
-
-
-[testenv:pylint]
-basepython = python3
-skip_install = true
-deps =
-    pyflakes
-    pylint
-commands =
-    pylint fio_area
-
-
-[testenv:doc]
-select = D1
-ignore = D105
-deps =
-    pydocstyle
-commands =
-    python -m pydocstyle fio_area
