--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "2.7"
   - "3.4"
+env:
+  - GDAL_VERSION=2.1
 install:
   - "pip install coveralls"
   - "pip install -e .[test]"
