--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.4"
 env:
   - GDAL_VERSION=2.1
+  - PROJ_DIR=/usr/local
 install:
   - "pip install coveralls"
   - "pip install -e .[test]"
